<resources>
    <string name="app_name">Cook.io</string>
    <string name="news_header">Вам понравится</string>
    <string name="new_receipt">Что будем готовить?</string>
    <string name="search_hint">Ищите как угодно - найдём всё, что есть</string>
    <string name="communities">Ваши сообщества</string>
    <string name="settings">Настройки</string>
    <string name="profile">Ваш профиль</string>
    <string name="welcome_message">Добро пожаловать</string>
    <string name="email_hint">example@org.com</string>
    <string name="email_required">Введите адрес эл. почты</string>
    <string name="new_password_required">Придумайте пароль</string>
    <string name="password_required">Введите пароль</string>
    <string name="password_hint">qwerty1234</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="sign_up_hint">Нет аккаунта? Зарегистрироваться</string>
    <string name="sign_in_hint">Уже есть аккаунт? Войти</string>
    <string name="sign_in_warning">Неверный логин или пароль</string>
    <string name="name_required">Укажите Ваше имя</string>
    <string name="name_hint">Имя Фамилия</string>
    <string name="nickname_required">Придумайте псевдоним</string>
    <string name="nickname_hint">Поль Бокюз</string>
    <string name="logout">Выйти из аккаунта</string>
    <string name="cooking_now">Готовим</string>
    <string name="start_cooking">Перейти к готовке</string>
    <string name="you_will_need">Вам понадобятся</string>
    <string name="prepare_ingredients">Подготовьте ингредиенты</string>
    <string name="next">Дальше</string>
    <string name="receipt">Рецепт</string>
    <string name="meal_done">Bon appetit!</string>
    <string name="watching_results">Подведение итогов</string>
    <string name="difficult">Сложность</string>
    <string name="time">Время готовки</string>
    <string name="amount_of_ingredients">Количество ингредиентов</string>
    <string name="at_all">Итого</string>
    <string name="back_to_main">На главную</string>
    <string name="name_header">Имя</string>
    <string name="lastname_header">Фамилия</string>
    <string name="email_header">Эл. почта</string>
    <string name="points_header">Cook points</string>
    <string name="nickname_header">Псевдоним</string>
    <string name="edit_user">Редактировать профиль</string>
    <string name="save">Сохранить</string>
    <string name="lastname_required">Укажите вашу фамилию</string>
</resources>