<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20dp"
        android:textColor="@color/black">
    </TextView>

    <TextView
        android:id="@+id/email_required"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_required"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat"
        android:layout_marginStart="20dp">
    </TextView>

    <EditText
        android:id="@+id/email_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@+id/email_required"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/montserrat"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress">
    </EditText>

    <TextView
        android:id="@+id/password_required"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_required"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/email_input"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat"
        android:layout_marginStart="20dp">
    </TextView>

    <EditText
        android:id="@+id/password_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@+id/password_required"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:hint="@string/password_hint"
        android:fontFamily="@font/montserrat"
        android:inputType="textPassword">
    </EditText>

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/password_input"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:backgroundTint="@color/main_button_color"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/montserrat_bold">
    </Button>

    <TextView
        android:id="@+id/sign_in_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_warning"
        app:layout_constraintTop_toBottomOf="@id/sign_in_button"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/red"
        android:backgroundTint="@color/pink"
        android:fontFamily="@font/montserrat"
        android:textSize="15sp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/sign_up_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/black"
        android:alpha="0.5"
        app:layout_constraintTop_toBottomOf="@id/sign_in_button"
        android:text="@string/sign_up_hint"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp">
    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>