<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/receipt_name_in_ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="20sp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            tools:text="Рататуй">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:textSize="20sp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:text="@string/prepare_ingredients">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="20sp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/you_will_need">
        </TextView>

        <ListView
            android:id="@+id/ingredients"
            android:layout_width="match_parent"
            android:layout_height="441dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp">
        </ListView>
        
        <Button
            android:id="@+id/next_to_receipt_button"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textColor="@color/black"
            android:backgroundTint="@color/main_button_color"
            android:layout_gravity="center">
        </Button>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>