<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView6"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="24dp"
            android:layout_marginStart="40dp"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_header"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black">
            </TextView>

            <TextView
                android:id="@+id/lastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="90dp"
                android:fontFamily="@font/montserrat"
                android:textSize="20sp"
                tools:text="Гюсто" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lastname_header"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black">
            </TextView>

            <TextView
                android:id="@+id/nickName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="40dp"
                android:fontFamily="@font/montserrat"
                android:textSize="20sp"
                tools:text="Амбрэ" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nickname_header"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black">
            </TextView>

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/montserrat"
                android:textSize="20sp"
                tools:text="Гюсто" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_header"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black">
            </TextView>

            <TextView
                tools:text="green98vitalic@gmail.com"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="40dp"
                android:fontFamily="@font/montserrat"
                android:textSize="18sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/points_header"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black">
            </TextView>

            <TextView
                android:id="@+id/cook_points"
                android:background="@drawable/rounded_item"
                android:backgroundTint="@color/light_green"
                tools:text="250"
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/email"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/montserrat"
                android:textSize="20sp"/>
        </LinearLayout>


        <Button
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            app:layout_constraintTop_toBottomOf="@+id/cook_points"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="40dp"
            android:backgroundTint="@color/main_button_color"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat"
            android:textSize="20sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>