<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:textColor="@color/black"
                android:id="@+id/receipt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Рататуй"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="25sp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="40dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/watching_results"
                android:fontFamily="@font/montserrat"
                android:textSize="25sp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="40dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/difficult"
                android:fontFamily="@font/montserrat"
                android:textSize="25sp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp" />
            <TextView
                android:id="@+id/difficult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="3"
                android:fontFamily="@font/montserrat"
                android:textSize="25sp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="40dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:fontFamily="@font/montserrat"
                android:textSize="25sp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="40dp" />
            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="2"
                android:fontFamily="@font/montserrat"
                android:textSize="25sp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="40dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount_of_ingredients"
                android:fontFamily="@font/montserrat"
                android:textSize="25sp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="40dp" />
            <TextView
                android:id="@+id/amount_of_ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="2"
                android:textSize="25sp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="40dp" />

            <LinearLayout
                android:padding="5dp"
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="40dp"
                android:background="@drawable/rounded_item">
                <TextView
                    android:textColor="@color/black"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/at_all"
                    android:fontFamily="@font/montserrat_bold"
                    android:textSize="25sp"
                    android:layout_marginStart="10dp"/>
                
                <LinearLayout
                    android:padding="5dp"
                    android:paddingEnd="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/rounded_item"
                    android:backgroundTint="@color/light_green">
                    <Button
                        android:id="@+id/receipt_result"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="+120"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/montserrat_bold"
                        android:backgroundTint="@color/light_green"/>
                    
                    
                    <ImageView
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/fork_and_knife"/>
                </LinearLayout>

            </LinearLayout>
            
            <LinearLayout
                android:padding="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_item"
                android:backgroundTint="@color/main_button_color">
                <Button
                    android:layout_gravity="center_vertical"
                    android:id="@+id/back_to_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back_to_main"
                    android:backgroundTint="@color/main_button_color"
                    android:textColor="@color/black"
                    android:fontFamily="@font/montserrat_bold"
                    android:textSize="16sp"/>
                
                <ImageView
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/home"/>
            </LinearLayout>

        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>